# SER-Energy-Grid-Sim

./: CITATION.cff  MANIFEST.txt  README.md  REPORT.md  USAGE.md  pyproject.toml  requirements.txt
constraint_field/: MANIFEST.txt  __init__.py  compare.py
constraint_field/adapters/: __init__.py  base.py  caiso.py  eia.py  synthetic.py
constraint_field/analysis/: __init__.py  decontaminated_lead.py  divergence.py  models.py  regimes.py  visualize_decontaminated.py  visualize_divergence.py
constraint_field/dynamics/: __init__.py  operators.py  simulator.py
constraint_field/experiments/cross_corridor/: e_regimes.py  metrics.py
constraint_field/field/: __init__.py  analysis.py  builder.py  visualize.py
constraint_field/graph/: __init__.py  edge_fluidity.py  network.py  node_signals.py  propagation.py  topology.py  visualize_graph.py
constraint_field/inference/: __init__.py  base.py  calibration.py  congestion.py  flow_efficiency.py  price_spread.py
experiments/: __init__.py
experiments/cross_corridor/: __init__.py  config.py  simulation.py  tests.py  visualize.py
scripts/: run_corridor_loading.py  run_cross_corridor.py  run_decontaminated_lead.py  run_demo.py  run_divergence_analysis.py  run_dual_constraint.py  run_experiments.py  run_graph_analysis.py  run_graph_model.py  run_hard_floor_corridor.py  run_spatial_experiments.py  run_sw_variants.py  run_threshold_propagation.py
