[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "constraint_field"
version = "0.1.0"
description = "Field-based constraint dynamics model for electricity system analysis"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "networkx>=3.1",
    "requests>=2.31",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
    "tqdm>=4.65",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["constraint_field*"]
